Inicial commit with Handbook design

--- a/typography.html
+++ b/typography.html
@@ -28,6 +28,15 @@
 			<p>Follow a few simple guidelines, and great typography is suddenly within reach.</p>
 		</header>
 
+		<figure class="blockquote">
+			<blockquote cite="http://www.alistapart.com/articles/more-meaningful-typography">
+				<p>By using culturally relevant, historically pleasing ratios to create modular scales and basing the measurements in our compositions on values from those scales, we can achieve a visual harmony not found in layouts that use arbitrary, conventional, or easily divisible numbers.</p>
+			</blockquote>
+			<figcaption><cite class="author"><small><a href="http://www.alistapart.com/articles/more-meaningful-typography" rel="external">Tim Brown</a></small></cite></figcaption>
+		</figure>
+
+		<a href="http://modularscale.com/scale/?px1=18&px2=14&ra1=1.618&ra2=0">Typographic Modular Scale for WordPress.com</a>
+
 		<section class="pattern-group">
 			<article class="pattern">
 				<h3 id="open-sans">Open Sans</h3>
