--- a/components.html
+++ b/components.html
@@ -3,133 +3,168 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>WordPress.com Compontents</title>
-		<meta name="description" content="">
+		<title>Components | WordPress.com Design Handbook</title>
+		<meta name="description" content="WordPress.com Design Handbook">
 		<meta name="viewport" content="width=device-width">
 		<link rel='stylesheet' href='css/style.css'>
 		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
+
+		<link rel="icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" sizes="16x16" />
 
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
-		<header class="library-navigation">
-			<div class="library-logo"><span class="wpcom-logo">Menu</span></div>
-			<ul>
-				<li><a href="index.html">Colors</a></li>
-				<li><a href="typography.html">Typography</a></li>
-				<li><a href="icons.html">Icons</a></li>
-				<li class="current"><a href="components.html">Components</a></li>
-			</ul>
-		</header>
 
-		<header class="library-header">
-			<h1>Component Library</h1>
-			<p>There&rsquo;s no need to reinvent the wheel. Use a pattern, and make everyone&rsquo;s life a little easier!</p>
-		</header>
+		<header id="masthead" class="site-header" role="banner">
+			<div class="site-branding">
+				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com Design Handbook</a></h1>
+			</div>
+		</header><!-- #masthead -->
 
-<div class="main">
-	<div class="primary">
-		<article class="section">
-			<h2 class="section__title">WordPress Icon</h2>
-			<p>Pulls the icon from a font.</p>
-			<div class="preview">
-				<span class="wpcom-logo"></span>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;span class="wpcom-logo"&gt;&lt;span&gt;</pre>
-		</article><!-- .section-->
+		<div id="content" class="site-content">
 
-		<article class="section">
-			<h2 class="section__title">Avatar</h2>
-			<p>Both square and circle! Gotta fuel the round avatar debate!</p>
-			<div class="preview">
-				<div class="avatar">
-					<img height="50" width="50" alt="Blavatar" src="http://1.gravatar.com/avatar/de8fa8a09d70eeb2166be57caf94ed92?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Fblavatar%2F2dcd2d6eb4a4035b8ed295a2cf83aca6%3Fs%3D100%26d%3Dhttp%253A%252F%252Fs2.wp.com%252Fwp-content%252Fthemes%252Fh4%252Ftabs%252Fimages%252Fdefaultavatar.png&amp;r=PG" rel="http://blog.nickhamze.com">
-				</div>
-				<div class="avatar--rounded">
-					<img height="50" width="50" alt="Blavatar" src="http://1.gravatar.com/avatar/de8fa8a09d70eeb2166be57caf94ed92?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Fblavatar%2F2dcd2d6eb4a4035b8ed295a2cf83aca6%3Fs%3D100%26d%3Dhttp%253A%252F%252Fs2.wp.com%252Fwp-content%252Fthemes%252Fh4%252Ftabs%252Fimages%252Fdefaultavatar.png&amp;r=PG" rel="http://blog.nickhamze.com">
-				</div>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;div class="avatar"&gt;
-&nbsp;&nbsp;&lt;img height="50" width="50" alt="Blavatar" src="#" rel="#"&gt;
-&lt;/div&gt;
+			<nav id="site-navigation" class="main-navigation" role="navigation">
+				<button class="menu-toggle">Navigation</button>
+				<ul>
+					<li><a href="index.html">Introduction</a></li>
+					<li><a href="logo.html">Logotype</a></li>
+					<li><a href="colors.html">Colors</a></li>
+					<li><a href="typography.html">Typography</a></li>
+					<li><a href="icons.html">Iconography</a></li>
+					<li><a href="metrics.html">Metrics</a></li>
+					<li class="current"><a href="components.html">Components</a>
+						<ul>
+							<li><a href="atoms.html">Atoms</a></li>
+							<li><a href="molecules.html">Molecules</a></li>
+							<li><a href="organisms.html">Organisms</a></li>
+							<li><a href="templates.html">Templates</a></li>
+						</ul>
+					</li>
+					<li><a href="sass.html">Sass Reference</a></li>
+				</ul>
+			</nav><!-- #site-navigation -->
 
-&lt;div class="avatar--rounded"&gt;
-&nbsp;&nbsp;&lt;img height="50" width="50" alt="Blavatar" src="#" rel="#"&gt;
-&lt;/div&gt;</pre>
-		</article><!-- .section -->
+			<main id="main" class="site-main" role="main">
+				<article id="handbook-intro" class="page">
 
-		<article class="section">
-			<h2 class="section__title">Button: Primary</h2>
-			<p>Aenean lacinia bibendum nulla sed consectetur.</p>
-			<div class="preview">
-				<a class="button--primary">I'm a BUTTON!!!</a>
-				<a class="button--primary">Me too!</a>
-				<a class="button--primary" disabled>Disabled</a>
-				<a class="button--primary" disabled>*sniff*</a>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;a class="button--primary"&gt;Active button&lt;/a&gt;
+					<header class="section-header">
+						<h1>Component Library</h1>
+						<p>There&rsquo;s no need to reinvent the wheel. Use a pattern, and make everyone&rsquo;s life a little easier!</p>
+					</header>
 
-&lt;a class="button--primary" disabled&gt;Disabled button&lt;/a&gt;</pre>
-		</article><!-- .section -->
+					<article class="section">
+						<h2 class="section__title">WordPress Icon</h2>
+						<p>Pulls the icon from a font.</p>
+						<div class="preview">
+							<span class="wpcom-logo"></span>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;span class="wpcom-logo"&gt;&lt;span&gt;</pre>
+					</article><!-- .section-->
 
-		<article class="section">
-			<h2 class="section__title">Button: secondary</h2>
-			<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			<div class="preview">
-				<a class="button--secondary">I'm a BUTTON!!!</a>
-				<a class="button--secondary">Me too!</a>
-				<a class="button--secondary" disabled>Disabled :(</a>
-				<a class="button--secondary" disabled>*sniff*</a>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;a class="button--secondary"&gt;Active button&lt;/a&gt;
+					<article class="section">
+						<h2 class="section__title">Avatar</h2>
+						<p>Both square and circle! Gotta fuel the round avatar debate!</p>
+						<div class="preview">
+							<div class="avatar">
+								<img height="50" width="50" alt="Blavatar" src="http://1.gravatar.com/avatar/de8fa8a09d70eeb2166be57caf94ed92?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Fblavatar%2F2dcd2d6eb4a4035b8ed295a2cf83aca6%3Fs%3D100%26d%3Dhttp%253A%252F%252Fs2.wp.com%252Fwp-content%252Fthemes%252Fh4%252Ftabs%252Fimages%252Fdefaultavatar.png&amp;r=PG" rel="http://blog.nickhamze.com">
+							</div>
+							<div class="avatar--rounded">
+								<img height="50" width="50" alt="Blavatar" src="http://1.gravatar.com/avatar/de8fa8a09d70eeb2166be57caf94ed92?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Fblavatar%2F2dcd2d6eb4a4035b8ed295a2cf83aca6%3Fs%3D100%26d%3Dhttp%253A%252F%252Fs2.wp.com%252Fwp-content%252Fthemes%252Fh4%252Ftabs%252Fimages%252Fdefaultavatar.png&amp;r=PG" rel="http://blog.nickhamze.com">
+							</div>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;div class="avatar"&gt;
+			&nbsp;&nbsp;&lt;img height="50" width="50" alt="Blavatar" src="#" rel="#"&gt;
+			&lt;/div&gt;
 
-&lt;a class="button--secondary" disabled&gt;Disabled button&lt;/a&gt;</pre>
-		</article><!-- .section -->
+			&lt;div class="avatar--rounded"&gt;
+			&nbsp;&nbsp;&lt;img height="50" width="50" alt="Blavatar" src="#" rel="#"&gt;
+			&lt;/div&gt;</pre>
+					</article><!-- .section -->
 
-		<article class="section">
-			<h2 class="section__title">Text Input</h2>
-			<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			<div class="preview">
-				<input type="text" name="name" value="" id="text-input" placeholder="Placeholder text.">
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;input type="text" name="name" value="" id="text-input" placeholder="Placeholder text."&gt;</pre>
-		</article><!-- .section-->
+					<article class="section">
+						<h2 class="section__title">Button: Primary</h2>
+						<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+						<div class="preview">
+							<a class="button--primary">I'm a BUTTON!!!</a>
+							<a class="button--primary">Me too!</a>
+							<a class="button--primary" disabled>Disabled</a>
+							<a class="button--primary" disabled>*sniff*</a>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;a class="button--primary"&gt;Active button&lt;/a&gt;
 
-		<article class="section">
-			<h2 class="section__title">Text Area</h2>
-			<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			<div class="preview">
-				<textarea name="name" id="textarea">Some regular text.</textarea>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;textarea name="name" id="textarea"&gt;Some regular text.&lt;/textarea&gt;</pre>
-		</article><!-- .section-->
+			&lt;a class="button--primary" disabled&gt;Disabled button&lt;/a&gt;</pre>
+					</article><!-- .section -->
 
-		<article class="section">
-			<h2 class="section__title">Radio Button</h2>
-			<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-			<div class="preview">
-				<div class="preview__row">
-					<input type="radio" name="filters" id="newest" value="newest" checked="checked" /> <label for="newest">Newest</label><br>
-				</div>
-				<div class="preview__row">
-					<input type="radio" name="filters" id="most-popular" value="most-popular" /> <label for="most-popular">Most Popular</label>
-				</div>
-			</div><!-- .preview -->
-			<pre class="code-block">&lt;input type="radio" name="filters" id="most-popular" value="most-popular" /&gt; &lt;label for="most-popular"&gt;Most Popular&lt;/label&gt;</pre>
-		</article><!-- .section-->
+					<article class="section">
+						<h2 class="section__title">Button: secondary</h2>
+						<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						<div class="preview">
+							<a class="button--secondary">I'm a BUTTON!!!</a>
+							<a class="button--secondary">Me too!</a>
+							<a class="button--secondary" disabled>Disabled :(</a>
+							<a class="button--secondary" disabled>*sniff*</a>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;a class="button--secondary"&gt;Active button&lt;/a&gt;
 
-		<article class="section">
-			<h2 class="section__title">Template</h2>
-			<p>Description</p>
-			<div class="preview">
-				.preview
-			</div><!-- .preview -->
-			<pre class="code-block">.code-block</pre>
-		</article><!-- .section-->
+			&lt;a class="button--secondary" disabled&gt;Disabled button&lt;/a&gt;</pre>
+					</article><!-- .section -->
 
-	</div>
-</div><!-- .main -->
+					<article class="section">
+						<h2 class="section__title">Text Input</h2>
+						<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						<div class="preview">
+							<input type="text" name="name" value="" id="text-input" placeholder="Placeholder text.">
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;input type="text" name="name" value="" id="text-input" placeholder="Placeholder text."&gt;</pre>
+					</article><!-- .section-->
+
+					<article class="section">
+						<h2 class="section__title">Text Area</h2>
+						<p>Etiam porta sem malesuada magna mollis euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						<div class="preview">
+							<textarea name="name" id="textarea">Some regular text.</textarea>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;textarea name="name" id="textarea"&gt;Some regular text.&lt;/textarea&gt;</pre>
+					</article><!-- .section-->
+
+					<article class="section">
+						<h2 class="section__title">Radio Button</h2>
+						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+						<div class="preview">
+							<div class="preview__row">
+								<input type="radio" name="filters" id="newest" value="newest" checked="checked" /> <label for="newest">Newest</label><br>
+							</div>
+							<div class="preview__row">
+								<input type="radio" name="filters" id="most-popular" value="most-popular" /> <label for="most-popular">Most Popular</label>
+							</div>
+						</div><!-- .preview -->
+						<pre class="code-block">&lt;input type="radio" name="filters" id="most-popular" value="most-popular" /&gt; &lt;label for="most-popular"&gt;Most Popular&lt;/label&gt;</pre>
+					</article><!-- .section-->
+
+					<article class="section">
+						<h2 class="section__title">Template</h2>
+						<p>Description</p>
+						<div class="preview">
+							.preview
+						</div><!-- .preview -->
+						<pre class="code-block">.code-block</pre>
+					</article><!-- .section-->
+					
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+
+				</article>
+				<nav id="page-navigation" class="page-links">
+					<ul>
+						<li class="page-links-previous"><a href="metrics.html">Metrics</a></li>
+						<li class="page-links-next"><a href="atoms.html">Atoms</a></li>
+					</ul>
+				</nav><!-- #page-navigation -->
+			</main><!-- #main -->
+
+		</div><!-- #content -->
+
+
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
