--- a/metrics.html
+++ b/metrics.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>WordPress.com Design Handbook</title>
+		<title>Metrics | WordPress.com Design Handbook</title>
 		<meta name="description" content="WordPress.com Design Handbook">
 		<meta name="viewport" content="width=device-width">
 		<link rel='stylesheet' href='css/style.css'>
@@ -27,12 +27,12 @@
 			<nav id="site-navigation" class="main-navigation" role="navigation">
 				<button class="menu-toggle">Navigation</button>
 				<ul>
-					<li class="current"><a href="index.html">Introduction</a></li>
+					<li><a href="index.html">Introduction</a></li>
 					<li><a href="logo.html">Logotype</a></li>
 					<li><a href="colors.html">Colors</a></li>
 					<li><a href="typography.html">Typography</a></li>
 					<li><a href="icons.html">Iconography</a></li>
-					<li><a href="metrics.html">Metrics</a></li>
+					<li class="current"><a href="metrics.html">Metrics</a></li>
 					<li><a href="components.html">Components</a>
 						<ul>
 							<li><a href="atoms.html">Atoms</a></li>
@@ -49,31 +49,22 @@
 				<article id="handbook-intro" class="page">
 
 					<header class="section-header">
-						<h1>Introduction</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<h1>Metrics</h1>
+						<p>This is where the isht gets realz...</p>
 					</header>
 					
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-					<h2>Some title</h2>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-					<h3>Some less important title</h3>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
-						<li class="page-links-previous"><a href="index.html">Introduction</a></li>
-						<li class="page-links-next"><a href="logo.html">Logotype</a></li>
+						<li class="page-links-previous"><a href="icons.html">Icons</a></li>
+						<li class="page-links-next"><a href="components.html">Components</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
 			</main><!-- #main -->
 
 		</div><!-- #content -->
-
 
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
