--- a/typography.html
+++ b/typography.html
@@ -3,146 +3,187 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>WordPress.com Typography</title>
-		<meta name="description" content="">
+		<title>Typography | WordPress.com Design Handbook</title>
+		<meta name="description" content="WordPress.com Design Handbook">
 		<meta name="viewport" content="width=device-width">
 		<link rel='stylesheet' href='css/style.css'>
 		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
 
-		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:300italic,400italic,600italic,400,300,600|Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'>
+		<link rel="icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" sizes="16x16" />
+
+		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
-		<header class="library-navigation">
-			<div class="library-logo"><span class="wpcom-logo">Menu</span></div>
-			<ul>
-				<li><a href="index.html">Colors</a></li>
-				<li class="current"><a href="typography.html">Typography</a></li>
-				<li><a href="icons.html">Icons</a></li>
-				<li><a href="components.html">Components</a></li>
-			</ul>
-		</header>
 
-		<header class="library-header">
-			<h1>Typographic Style Guide</h1>
-			<p>Follow a few simple guidelines, and great typography is suddenly within reach.</p>
-		</header>
+		<header id="masthead" class="site-header" role="banner">
+			<div class="site-branding">
+				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com Design Handbook</a></h1>
+			</div>
+		</header><!-- #masthead -->
 
-		<figure class="blockquote">
-			<blockquote cite="http://www.alistapart.com/articles/more-meaningful-typography">
-				<p>By using culturally relevant, historically pleasing ratios to create modular scales and basing the measurements in our compositions on values from those scales, we can achieve a visual harmony not found in layouts that use arbitrary, conventional, or easily divisible numbers.</p>
-			</blockquote>
-			<figcaption><cite class="author"><small><a href="http://www.alistapart.com/articles/more-meaningful-typography" rel="external">Tim Brown</a></small></cite></figcaption>
-		</figure>
+		<div id="content" class="site-content">
 
-		<a href="http://modularscale.com/scale/?px1=18&px2=14&ra1=1.618&ra2=0">Typographic Modular Scale for WordPress.com</a>
-
-		<section class="pattern-group">
-			<article class="pattern">
-				<h3 id="open-sans">Open Sans</h3>
-				<p>WordPress.com uses Open Sans as the default text face across all the public areas of WordPress.com. It works great pretty much everywhere, but it's especially great for body copy and UI.</p>
-
-				<p>You can choose which variants of Open Sans to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Open+Sans">Google Fonts</a>.</p>
-
-				<section class="swatches col-3">
-					<div class="swatch open-sans-300">
-						<div class="type-demo">
-							Aa
-						</div>
-						<ul class="swatch-details">
-							<li><strong>Open Sans 300</strong></li>
+			<nav id="site-navigation" class="main-navigation" role="navigation">
+				<button class="menu-toggle">Navigation</button>
+				<ul>
+					<li><a href="index.html">Introduction</a></li>
+					<li><a href="logo.html">Logotype</a></li>
+					<li><a href="colors.html">Colors</a></li>
+					<li class="current"><a href="typography.html">Typography</a></li>
+					<li><a href="icons.html">Iconography</a></li>
+					<li><a href="metrics.html">Metrics</a></li>
+					<li><a href="components.html">Components</a>
+						<ul>
+							<li><a href="atoms.html">Atoms</a></li>
+							<li><a href="molecules.html">Molecules</a></li>
+							<li><a href="organisms.html">Organisms</a></li>
+							<li><a href="templates.html">Templates</a></li>
 						</ul>
-					</div>
+					</li>
+					<li><a href="sass.html">Sass Reference</a></li>
+				</ul>
+			</nav><!-- #site-navigation -->
 
-					<div class="swatch open-sans-500">
-						<div class="type-demo">
-							Aa
-						</div>
-						<ul class="swatch-details">
-							<li><strong>Open Sans 500</strong></li>
-						</ul>
-					</div>
+			<main id="main" class="site-main" role="main">
+				<article id="handbook-intro" class="page">
 
-					<div class="swatch open-sans-title">
-						<div class="type-demo">
-							Posts by Type
-						</div>
-						<ul class="swatch-details">
-							<li><strong>Open Sans Title</strong></li>
-						</ul>
-					</div>
-				</section>
-			</article>
+					<header class="section-header">
+						<h1>Typographic Style Guide</h1>
+						<p>Follow a few simple guidelines, and great typography is suddenly within reach.</p>
+					</header>
+					
+					<figure class="blockquote">
+						<blockquote cite="http://www.alistapart.com/articles/more-meaningful-typography">
+							<p>By using culturally relevant, historically pleasing ratios to create modular scales and basing the measurements in our compositions on values from those scales, we can achieve a visual harmony not found in layouts that use arbitrary, conventional, or easily divisible numbers.</p>
+						</blockquote>
+						<figcaption><cite class="author"><small><a href="http://www.alistapart.com/articles/more-meaningful-typography" rel="external">Tim Brown</a></small></cite></figcaption>
+					</figure>
 
-			<article class="pattern">
-				<h3 id="merriweather">Merriweather</h3>
-				<p>Merriweather makes a great counterpart to Open Sans. Its best suited for larger font sizes and bolder weights &mdash; a great face for titles.</p>
+					<a href="http://modularscale.com/scale/?px1=18&px2=14&ra1=1.618&ra2=0">Typographic Modular Scale for WordPress.com</a>
 
-				<p>You can choose which variants of Merriweather to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Merriweather">Google Fonts</a>.</p>
+					<section class="pattern">
+						<h3 id="open-sans">Open Sans</h3>
+						<p>WordPress.com uses Open Sans as the default text face across all the public areas of WordPress.com. It works great pretty much everywhere, but it's especially great for body copy and UI.</p>
 
-				<section class="swatches col-2">
-					<div class="swatch merriweather-900">
-						<div class="type-demo">
-							Aa
-						</div>
-						<ul class="swatch-details">
-							<li><strong>Merriweather 900</strong></li>
-						</ul>
-					</div>
+						<p>You can choose which variants of Open Sans to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Open+Sans">Google Fonts</a>.</p>
 
-					<div class="swatch merriweather-700">
-						<div class="type-demo">
-							Aa
-						</div>
-						<ul class="swatch-details">
-							<li><strong>Merriweather 700</strong></li>
-						</ul>
-					</div>
-				</section>
-			</article>
+						<section class="sample">
+							<div class="swatch open-sans-300">
+								<div class="type-demo">
+									Aa
+								</div>
+								<ul class="swatch-details">
+									<li><strong>Open Sans 300</strong></li>
+								</ul>
+							</div>
 
-			<article class="pattern">
-				<h3>Line Height, Font Size, and Modular Scale</h3>
+							<div class="swatch open-sans-500">
+								<div class="type-demo">
+									Aa
+								</div>
+								<ul class="swatch-details">
+									<li><strong>Open Sans 500</strong></li>
+								</ul>
+							</div>
 
-				<p>Paragraph line-height should be 1.618 (the <em>golden</em><strike>rod</strike> ratio.) For titles and larger type, this feels a little too "spacey," so try to keep those down to 1.258</p>
-			</article>
+							<div class="swatch open-sans-title">
+								<div class="type-demo">
+									Posts by Type
+								</div>
+								<ul class="swatch-details">
+									<li><strong>Open Sans Title</strong></li>
+								</ul>
+							</div>
+						</section><!-- .sample -->
+					</section><!-- .pattern -->
 
-			<article class="pattern">
-				<h3>Typesetting Sample</h3>
-				<p>Here's a simple example to help you hit the ground running.</p>
+					<section class="pattern">
+						<h3 id="merriweather">Merriweather</h3>
+						<p>Merriweather makes a great counterpart to Open Sans. Its best suited for larger font sizes and bolder weights &mdash; a great face for titles.</p>
 
-				<div class="sample">
-					<article id="typesetting-sample">
-						<h1><a href="#">The Principles of Good Design</a></h1>
-						<h4><a href="#">May 13, 2014</a>&nbsp;&nbsp;&nbsp;&nbsp;By <a href="#">Mel Choyce</a></h4>
-						<p>Is beauty objectively true? Are there principles you can use to guide you to it in your work? Can designers from both the sciences and the arts look at each others work and find beauty? These are important questions for all designers.</p>
-					</article>
-					<pre>
-						<code data-language="css">h1 {
-	font-family: "Merriweather", georgia, serif;
-	font-size: 2.291em;
-	font-weight: 700;
-	line-height: 1.258;
-}
+						<p>You can choose which variants of Merriweather to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Merriweather">Google Fonts</a>.</p>
 
-h4 {
-	font-family: "Open Sans", helvetica, arial, sans-serif;
-	font-weight: 700;
-	font-size: 0.875em;
-	line-height: 1.618;
-	text-transform: uppercase;
-	letter-spacing: 0.079em;
-}
+						<section class="swatches col-2">
+							<div class="swatch merriweather-900">
+								<div class="type-demo">
+									Aa
+								</div>
+								<ul class="swatch-details">
+									<li><strong>Merriweather 900</strong></li>
+								</ul>
+							</div>
 
-p {
-	font-family: "Open Sans", helvetica, arial, sans-serif;
-	fong-weight: 400;
-	font-size: 1em;
-}</code>
-					</pre>
-				</div>
-			</article>
-		</section>
+							<div class="swatch merriweather-700">
+								<div class="type-demo">
+									Aa
+								</div>
+								<ul class="swatch-details">
+									<li><strong>Merriweather 700</strong></li>
+								</ul>
+							</div>
+						</section>
+					</section><!-- .pattern -->
+
+					<section class="pattern">
+						<h3>Line Height, Font Size, and Modular Scale</h3>
+
+						<p>Paragraph line-height should be 1.618 (the <em>golden</em><strike>rod</strike> ratio.) For titles and larger type, this feels a little too "spacey," so try to keep those down to 1.258</p>
+					</section><!-- .pattern -->
+
+					<section class="pattern">
+						<h3>Typesetting Sample</h3>
+						<p>Here's a simple example to help you hit the ground running.</p>
+
+						<section class="sample">
+							<div id="typesetting-sample">
+								<h1><a href="#">The Principles of Good Design</a></h1>
+								<h4><a href="#">May 13, 2014</a>&nbsp;&nbsp;&nbsp;&nbsp;By <a href="#">Mel Choyce</a></h4>
+								<p>Is beauty objectively true? Are there principles you can use to guide you to it in your work? Can designers from both the sciences and the arts look at each others work and find beauty? These are important questions for all designers.</p>
+							</div>
+							<pre>
+								<code data-language="css">
+									h1 {
+										font-family: "Merriweather", georgia, serif;
+										font-size: 2.291em;
+										font-weight: 700;
+										line-height: 1.258;
+									}
+
+									h4 {
+										font-family: "Open Sans", helvetica, arial, sans-serif;
+										font-weight: 700;
+										font-size: 0.875em;
+										line-height: 1.618;
+										text-transform: uppercase;
+										letter-spacing: 0.079em;
+									}
+
+									p {
+										font-family: "Open Sans", helvetica, arial, sans-serif;
+										fong-weight: 400;
+										font-size: 1em;
+									}
+								</code>
+							</pre>
+						</section><!-- .sample -->
+					</section><!-- .pattern -->
+
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+
+				</article>
+				<nav id="page-navigation" class="page-links">
+					<ul>
+						<li class="page-links-previous"><a href="colors.html">Colors</a></li>
+						<li class="page-links-next"><a href="icons.html">Iconography</a></li>
+					</ul>
+				</nav><!-- #page-navigation -->
+			</main><!-- #main -->
+
+		</div><!-- #content -->
+
+
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
