updates to styling

--- a/typography.html
+++ b/typography.html
@@ -62,6 +62,8 @@
 
 					<a href="http://modularscale.com/scale/?px1=18&px2=14&ra1=1.618&ra2=0">Typographic Modular Scale for WordPress.com</a>
 
+					<a href="http://modularscale.com/scale/?px1=18&amp;px2=14&amp;ra1=1.5&amp;ra2=0">Perfect Fitfth</a>
+
 					<section class="pattern">
 						<h3 id="open-sans">Open Sans</h3>
 						<p>WordPress.com uses Open Sans as the default text face across all the public areas of WordPress.com. It works great pretty much everywhere, but it's especially great for body copy and UI.</p>
