Update to typography and some colors

--- a/components.html
+++ b/components.html
@@ -48,8 +48,8 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
-						<h1>Component Library</h1>
+					<header class="page-header">
+						<h1>Components</h1>
 						<p>There&rsquo;s no need to reinvent the wheel. Use a pattern, and make everyone&rsquo;s life a little easier!</p>
 					</header>
 
