--- a/icons.html
+++ b/icons.html
@@ -48,8 +48,8 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
-						<h1>Icons</h1>
+					<header class="page-header">
+						<h1>Iconography</h1>
 						<p>Beautiful icons that are quick to use, and easy to create.</p>
 					</header>
 
