--- a/metrics.html
+++ b/metrics.html
@@ -48,7 +48,7 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
+					<header class="page-header">
 						<h1>Metrics</h1>
 						<p>This is where the isht gets realz...</p>
 					</header>
