--- a/sass.html
+++ b/sass.html
@@ -48,7 +48,7 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
+					<header class="page-header">
 						<h1>Sass Reference</h1>
 						<p>We bring all them Sassyness</p>
 					</header>
