--- a/colors.html
+++ b/colors.html
@@ -48,7 +48,7 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
+					<header class="page-header">
 						<h1>Color Guide</h1>
 						<p>Because the world is better in technicolor</p>
 					</header>
