--- a/typography.html
+++ b/typography.html
@@ -48,8 +48,8 @@
 			<main id="main" class="site-main" role="main">
 				<article id="handbook-intro" class="page">
 
-					<header class="section-header">
-						<h1>Typographic Style Guide</h1>
+					<header class="page-header">
+						<h1>Typography</h1>
 						<p>Follow a few simple guidelines, and great typography is suddenly within reach.</p>
 					</header>
 					
