--- a/metrics.html
+++ b/metrics.html
@@ -18,7 +18,7 @@
 
 		<header id="masthead" class="site-header" role="banner">
 			<div class="site-branding">
-				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com Design Handbook</a></h1>
+				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com <span class="design-handbook">Design Handbook</span></a></h1>
 			</div>
 		</header><!-- #masthead -->
 
