Media Queries and other style updates

--- a/components.html
+++ b/components.html
@@ -46,7 +46,7 @@
 			</nav><!-- #site-navigation -->
 
 			<main id="main" class="site-main" role="main">
-				<article id="handbook-intro" class="page">
+				<article id="handbook-components" class="page">
 
 					<header class="page-header">
 						<h1>Components</h1>
