--- a/typography.html
+++ b/typography.html
@@ -46,7 +46,7 @@
 			</nav><!-- #site-navigation -->
 
 			<main id="main" class="site-main" role="main">
-				<article id="handbook-intro" class="page">
+				<article id="handbook-typography" class="page">
 
 					<header class="page-header">
 						<h1>Typography</h1>
@@ -60,9 +60,6 @@
 						<figcaption><cite class="author"><small><a href="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/088179211X">Robert Bringhurst</a></small></cite></figcaption>
 					</figure>
 
-					<a href="http://modularscale.com/scale/?px1=18&px2=14&ra1=1.618&ra2=0">Typographic Modular Scale for WordPress.com</a>
-
-					<a href="http://modularscale.com/scale/?px1=18&amp;px2=14&amp;ra1=1.5&amp;ra2=0">Perfect Fitfth</a>
 
 					<figure class="blockquote">
 						<blockquote cite="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/088179211X">
@@ -88,7 +85,7 @@ instead of using arbitraty numbers, we conform to a harmonic scale</p>
 
 
 					<section class="pattern">
-						<h3 id="open-sans">Open Sans</h3>
+						<h2 id="open-sans">Open Sans</h2>
 						<p>WordPress.com uses Open Sans as the default text face across all the public areas of WordPress.com. It works great pretty much everywhere, but it's especially great for body copy and UI.</p>
 
 						<p>You can choose which variants of Open Sans to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Open+Sans">Google Fonts</a>.</p>
@@ -124,7 +121,7 @@ instead of using arbitraty numbers, we conform to a harmonic scale</p>
 					</section><!-- .pattern -->
 
 					<section class="pattern">
-						<h3 id="merriweather">Merriweather</h3>
+						<h2 id="merriweather">Merriweather</h2>
 						<p>Merriweather makes a great counterpart to Open Sans. Its best suited for larger font sizes and bolder weights &mdash; a great face for titles.</p>
 
 						<p>You can choose which variants of Merriweather to include by using <a href="http://www.google.com/fonts#UsePlace:use/Collection:Merriweather">Google Fonts</a>.</p>
