--- a/logo.html
+++ b/logo.html
@@ -46,7 +46,7 @@
 			</nav><!-- #site-navigation -->
 
 			<main id="main" class="site-main" role="main">
-				<article id="handbook-intro" class="page">
+				<article id="handbook-logo" class="page">
 
 					<header class="page-header">
 						<h1>Logotype</h1>
