--- a/colors.html
+++ b/colors.html
@@ -34,12 +34,14 @@
 					<li><a href="icons.html">Iconography</a></li>
 					<li><a href="metrics.html">Metrics</a></li>
 					<li><a href="components.html">Components</a>
+						<!-- START COMPONENTS
 						<ul>
 							<li><a href="atoms.html">Atoms</a></li>
 							<li><a href="molecules.html">Molecules</a></li>
 							<li><a href="organisms.html">Organisms</a></li>
 							<li><a href="templates.html">Templates</a></li>
 						</ul>
+						END COMPONENTS -->
 					</li>
 					<li><a href="sass.html">Sass Reference</a></li>
 				</ul>
@@ -204,7 +206,9 @@
 						</article>
 					</section>
 					
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+					<hr />
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">0</strong>g elit, <strong style="color:orange;">0</strong>ed do eiusmod <strong style="color:red;">0</strong>empor incididunt ut labore et dolore et magna aliqua.<br /> <strong>This paragraph is used to measure the line lenght for optimal characters per line.</strong></p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
