--- a/components.html
+++ b/components.html
@@ -34,12 +34,14 @@
 					<li><a href="icons.html">Iconography</a></li>
 					<li><a href="metrics.html">Metrics</a></li>
 					<li class="current"><a href="components.html">Components</a>
+						<!-- START COMPONENTS
 						<ul>
 							<li><a href="atoms.html">Atoms</a></li>
 							<li><a href="molecules.html">Molecules</a></li>
 							<li><a href="organisms.html">Organisms</a></li>
 							<li><a href="templates.html">Templates</a></li>
 						</ul>
+						END COMPONENTS -->
 					</li>
 					<li><a href="sass.html">Sass Reference</a></li>
 				</ul>
