--- a/logo.html
+++ b/logo.html
@@ -34,12 +34,14 @@
 					<li><a href="icons.html">Iconography</a></li>
 					<li><a href="metrics.html">Metrics</a></li>
 					<li><a href="components.html">Components</a>
+						<!-- START COMPONENTS
 						<ul>
 							<li><a href="atoms.html">Atoms</a></li>
 							<li><a href="molecules.html">Molecules</a></li>
 							<li><a href="organisms.html">Organisms</a></li>
 							<li><a href="templates.html">Templates</a></li>
 						</ul>
+						END COMPONENTS -->
 					</li>
 					<li><a href="sass.html">Sass Reference</a></li>
 				</ul>
@@ -50,7 +52,7 @@
 
 					<header class="page-header">
 						<h1>Logotype</h1>
-						<p>Fight the Fauxgo</p>
+						<p>Fight the fauxgo &amp; embrace the future</p>
 					</header>
 					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
