--- a/logo.html
+++ b/logo.html
@@ -33,17 +33,7 @@
 					<li><a href="typography.html">Typography</a></li>
 					<li><a href="icons.html">Iconography</a></li>
 					<li><a href="metrics.html">Metrics</a></li>
-					<li><a href="components.html">Components</a>
-						<!-- START COMPONENTS
-						<ul>
-							<li><a href="atoms.html">Atoms</a></li>
-							<li><a href="molecules.html">Molecules</a></li>
-							<li><a href="organisms.html">Organisms</a></li>
-							<li><a href="templates.html">Templates</a></li>
-						</ul>
-						END COMPONENTS -->
-					</li>
-					<li><a href="sass.html">Sass Reference</a></li>
+					<li><a href="patterns.html">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
@@ -52,10 +42,14 @@
 
 					<header class="page-header">
 						<h1>Logotype</h1>
-						<p>Fight the fauxgo &amp; embrace the future</p>
+						<p>The WordPress logo was originally created back in 2005 by Jason Santa Maria. The branding associated specifically with WordPress.com has evolved greatly since then, and that's what we'll document here.</p>
 					</header>
+
+					<p>The WordPress logo was created in early 2005 by Jason Santa Maria. Emigre's typeface &quot;Mrs Eaves&quot; is used for the logotype, and &quot;<a href="http://www.myfonts.com/fonts/emigre/dalliance-ot/roman/glyphs.html#glyphs/322943/77" title="Emigre - Delliance">Dalliance</a>&quot; (also by Emigre) was used as influence for the &quot;W&quot; mark. The logo was later visually refined by our very own Matt Miklik.</p>
 					
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+					<hr />
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">0</strong>g elit, <strong style="color:orange;">0</strong>ed do eiusmod <strong style="color:red;">0</strong>empor incididunt ut labore et dolore et magna aliqua.<br /> <strong>This paragraph is used to measure the line lenght for optimal characters per line.</strong></p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
