--- a/metrics.html
+++ b/metrics.html
@@ -33,17 +33,7 @@
 					<li><a href="typography.html">Typography</a></li>
 					<li><a href="icons.html">Iconography</a></li>
 					<li class="current"><a href="metrics.html">Metrics</a></li>
-					<li><a href="components.html">Components</a>
-						<!-- START COMPONENTS
-						<ul>
-							<li><a href="atoms.html">Atoms</a></li>
-							<li><a href="molecules.html">Molecules</a></li>
-							<li><a href="organisms.html">Organisms</a></li>
-							<li><a href="templates.html">Templates</a></li>
-						</ul>
-						END COMPONENTS -->
-					</li>
-					<li><a href="sass.html">Sass Reference</a></li>
+					<li><a href="patterns.html">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
