--- a/patterns.html
+++ b/patterns.html
@@ -33,17 +33,7 @@
 					<li><a href="typography.html">Typography</a></li>
 					<li><a href="icons.html">Iconography</a></li>
 					<li><a href="metrics.html">Metrics</a></li>
-					<li class="current"><a href="components.html">Components</a>
-						<!-- START COMPONENTS
-						<ul>
-							<li><a href="atoms.html">Atoms</a></li>
-							<li><a href="molecules.html">Molecules</a></li>
-							<li><a href="organisms.html">Organisms</a></li>
-							<li><a href="templates.html">Templates</a></li>
-						</ul>
-						END COMPONENTS -->
-					</li>
-					<li><a href="sass.html">Sass Reference</a></li>
+					<li class="current"><a href="patterns.html">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
@@ -51,7 +41,7 @@
 				<article id="handbook-components" class="page">
 
 					<header class="page-header">
-						<h1>Components</h1>
+						<h1>Patterns</h1>
 						<p>There&rsquo;s no need to reinvent the wheel. Use a pattern, and make everyone&rsquo;s life a little easier!</p>
 					</header>
 
