Update to text on Color page

--- a/colors.html
+++ b/colors.html
@@ -47,8 +47,8 @@
 
 					<section class="pattern-group">
 						<article class="pattern">
-							<h3 id="colors-wpcom-blue">"Baeta&rsquo;s" Blue</h3>
-							<p>Lonvingly named after Hugo Baeta, this is the primary WordPress.com blue.</p>
+							<h3 id="colors-wpcom-blue">WordPress.com Blue</h3>
+							<p>The main color. Derived originally from the core WordPress blues, but evolved into a much brighter and happy color</p>
 
 							<section class="swatches col-1">
 								<div class="swatch wpcom-blue">
