Extensive editing of Logotype page

--- a/icons.html
+++ b/icons.html
@@ -42,7 +42,7 @@
 
 					<header class="page-header">
 						<h1>Iconography</h1>
-						<p>Beautiful icons that are quick to use, and easy to create.</p>
+						<p>Icons are essencial to modern user interfaces, and should carry our brand in them.</p>
 					</header>
 
 					<section class="pattern-group">
@@ -411,7 +411,7 @@
 						</article>
 					</section>
 					
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:orange;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
