--- a/logo.html
+++ b/logo.html
@@ -38,18 +38,60 @@
 			</nav><!-- #site-navigation -->
 
 			<main id="main" class="site-main" role="main">
-				<article id="handbook-logo" class="page">
+				<article id="handbook-logo" class="handbook-logo page">
 
 					<header class="page-header">
 						<h1>Logotype</h1>
-						<p>The WordPress logo was originally created back in 2005 by Jason Santa Maria. The branding associated specifically with WordPress.com has evolved greatly since then, and that's what we'll document here.</p>
+						<p>The WordPress logotype is composed of the &quot;W&quot; mark and type. Carefully crafted proportions and positioning of these two elements in relation to each other are the essencial guideline to take from this page.</p>
 					</header>
 
-					<p>The WordPress logo was created in early 2005 by Jason Santa Maria. Emigre's typeface &quot;Mrs Eaves&quot; is used for the logotype, and &quot;<a href="http://www.myfonts.com/fonts/emigre/dalliance-ot/roman/glyphs.html#glyphs/322943/77" title="Emigre - Delliance">Dalliance</a>&quot; (also by Emigre) was used as influence for the &quot;W&quot; mark. The logo was later visually refined by our very own Matt Miklik.</p>
-					
-					<hr />
+					<section id="logotype-history" class="logotype-history article-section">
+						<h2>History</h2>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">0</strong>g elit, <strong style="color:orange;">0</strong>ed do eiusmod <strong style="color:red;">0</strong>empor incididunt ut labore et dolore et magna aliqua.<br /> <strong>This paragraph is used to measure the line lenght for optimal characters per line.</strong></p>
+						<p>The WordPress logo was created in early 2005 by Jason Santa Maria for the WordPress open source core project. He used two Emigre typefaces for the logo: &quot;<a href="http://www.myfonts.com/fonts/emigre/mrs-eaves-ot/small-caps-ot/" title="Emigre - Mrs. Eaves Samll Caps">Mrs. Eaves Small Caps</a>&quot; for the logotype, and &quot;<a href="http://www.myfonts.com/fonts/emigre/dalliance-ot/roman/glyphs.html#glyphs/322943/77" title="Emigre - Delliance">Dalliance</a>&quot; as influence for the &quot;W&quot; mark. The design was later visually refined by our very own Matt Miklic (formerly know as Matt Thomas, or MT) - the first designer at Automattic who helped shape the WordPress brand from very early on.</p>
+
+						<figure class="sample">	
+							<img src="images/logo-history-wporg.svg">
+						</figure>
+						
+						<p>WordPress.com has used a variation of the core logotype since it's inception. In 2013, with the adoption of &quot;<a href="https://www.google.com/fonts/specimen/Open+Sans" title="Google Fonts - Open Sans">Open Sans</a>&quot; as the text typeface, the logotype embraced it as well. We also decided to exclusively use the inverted logo &quot;W&quot; mark when representing WordPress.com.</p>
+
+						<figure class="sample">	
+							<img src="images/logo-wpcom.svg">
+						</figure>
+
+						<figure class="sample">	
+							<img src="images/logo-wpcom-vertical.svg">
+						</figure>
+					</section>
+
+					<section id="logotype-metrics" class="logotype-metrics article-section">
+						<h2>Metrics</h2>
+
+						<p>The metrics derive from the element that stared it all: the inverted &quot;W&quot; mark. From there, a grid was set, defining all the other proportions. That includes the <em>safety margin</em> around the logotype - magic whitespace that protects our brand from the world. The <em>safety margin</em> should always be half the size of the &quot;W&quot; mark, unless otherwise&nbsp;specified.</p>
+
+						<figure class="sample">	
+							<img src="images/logo-metrics.svg">
+						</figure>
+
+						<p>The text has been carefully positioned and kerned to show the WordPress.com name in all its glory, so preferably always use a composite version of the logotype (in svg, other image format, or icon font), instead of typing the text next to the &quot;W&quot; mark.</p>
+
+						<hr />
+
+						<p>More on this on the <a href="metrics.html">Metrics</a> section of this Handbook.</p>
+
+						<hr />
+					</section>
+
+					<section id="logotype-titles" class="logotype-titles article-section">
+						<h2>Logotype + Titles</h2>
+
+						<p>In some situations - like in this Design Handbook - there might be the need to add a Title paired with the Logotype. The metrics for that follow the same principles by which we positioned and sized the Logotype.</p>
+
+						<figure class="sample">	
+							<img src="images/logo-metrics-title.svg">
+						</figure>
+					</section>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
