Update to the Logotype page

--- a/logo.html
+++ b/logo.html
@@ -88,6 +88,8 @@
 
 						<p>In some situations - like in this Design Handbook - there might be the need to add a Title paired with the Logotype. The metrics for that follow the same principles by which we positioned and sized the Logotype.</p>
 
+						<p>In the case where we need to reduce the logotype to just the &quot;W&quot; mark, the height of the title should correspond to the x height of the logotype word - equivalent to a small caps height version of Open Sans Semi-bold - but aligned to the middle axis of the &quot;W&quot; mark. The text size proportion is visually explained in the full horizontal Logotype + Title example&nbsp;bellow:</p>
+
 						<figure class="sample">	
 							<img src="images/logo-metrics-title.svg">
 						</figure>
